--- a/src/main/resources/templates/carrito.html
+++ b/src/main/resources/templates/carrito.html
@@ -7,7 +7,12 @@
 </head>
 <body>
 <form th:action="@{/carrito.html}" method="post" th:object="${correo}">
-<h1 inline="text">Hello </h1> <input class="form-control" type="text" value="" th:field="*{admincorreo}" th:placeholder="${#httpServletRequest.remoteUser}">
+
+    <div class="form-group" >
+
+        <label for="correo" class="text-light lead font-weight-bold">Correo:</label>
+        <input class="form-control" id="correo" type="text" value="" th:field="*{admincorreo}" th:placeholder="${#httpServletRequest.remoteUser}" data-toggle="tooltip" data-placement="top" title="Correo">
+    </div>
     <input type="submit" value="Ingresar">
 </form>
 </body>
