--- a/src/main/resources/templates/restauranteAgregarBuscador.html
+++ b/src/main/resources/templates/restauranteAgregarBuscador.html
@@ -88,27 +88,27 @@
 
             <!--Datos de perfil del usuario-->
             <div class="general">
-                <form class="div-bordered" action="" style="padding: 15px; "  th:action="@{/restauranteAgregarBuscador.html/{AdminId}}" method="post" th:object="${rest}">
+                <form action="" style="padding: 15px; "  th:action="@{/restauranteAgregarBuscador.html/{AdminId}}" method="post" th:object="${rest}">
 
 
                 <fieldset>
 
-                    <legend><i class="far fa-address-card"></i> &nbsp; Nombre de restaurante</legend>
+                    <legend><i class="far fa-address-card text-light"></i> &nbsp; Nombre de restaurante</legend>
                     <div class="form-outline mb-4">
-                        <input type="text" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ@ ]{4,35}" class="form-control text-center" id="nombreRes" th:field="*{noombrerest}" maxlength="50" data-toggle="tooltip" data-placement="top">
-                        <label for="nombreRes" class="form-label">Nombre de restaurante <i class="fab fa-font-awesome-alt"></i></label>
+                        <input type="text" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ@ ]{4,35}" class="form-control text-center text-light" id="nombreRes" th:field="*{noombrerest}" maxlength="50" data-toggle="tooltip" data-placement="top">
+                        <label for="nombreRes" class="form-label text-light">Nombre de restaurante <i class="fab fa-font-awesome-alt"></i></label>
                     </div>
 
-                    <legend><i class="far fa-address-card"></i> &nbsp; Slogan Restaurante</legend>
+                    <legend><i class="far fa-address-card text-light"></i> &nbsp; Slogan Restaurante</legend>
                     <div class="form-outline mb-4">
-                        <input type="text" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ@ ]{4,35}" class="form-control" id="sloganRes" th:field="*{sloganrest}" maxlength="50" data-toggle="tooltip" data-placement="top">
-                        <label for="sloganRes" class="form-label">Slogan<i class="fab fa-font-awesome-alt"></i></label>
+                        <input type="text" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ@ ]{4,35}" class="form-control text-light" id="sloganRes" th:field="*{sloganrest}" maxlength="50" data-toggle="tooltip" data-placement="top">
+                        <label for="sloganRes" class="form-label text-light">Slogan<i class="fab fa-font-awesome-alt text-light"></i></label>
                     </div>
 
-                    <legend><i class="far fa-address-card"></i> &nbsp; Numero de mesas</legend>
+                    <legend><i class="far fa-address-card text-light"></i> &nbsp; Numero de mesas</legend>
                     <div class="form-outline mb-4">
-                        <input type="text" required="" pattern="[0-9]{1,10}" title="se permiten solo valores numericos" th:field="*{totalTablerest}" maxlength="10" class="form-control" id="mesasRes">
-                        <label for="mesasRes" class="form-label">cantidad de mesas <i class="fab fa-font-awesome-alt"></i></label>
+                        <input type="text" required="" pattern="[0-9]{1,10}" title="se permiten solo valores numericos" th:field="*{totalTablerest}" maxlength="10" class="form-control text-light" id="mesasRes">
+                        <label for="mesasRes" class="form-label text-light">cantidad de mesas <i class="fab fa-font-awesome-alt "></i></label>
                     </div>
 
                     </fieldset>
